# Stompbox

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml  rpi.yml
StompboxUI/: StompboxUI.sln
StompboxUI/Dependencies/stompbox/Dependencies/r8brain-free-src/: CDSPFracInterpolator.h  CDSPSincFilterGen.h  r8bbase.h
StompboxUI/MiniPlugins/: MiniPlugins.csproj
StompboxUI/StompboxAndroid/: StompboxActivity.cs  StompboxAndroid.csproj
StompboxUI/StompboxClient/StompboxAPI/: APIClient.cs  NativeAPI.cs  StompboxAPI.csproj  StompboxProcessor.cs
StompboxUI/StompboxHost/: StompboxHost.csproj
StompboxUI/StompboxImageProcessor/: StompboxImageProcessor.csproj
StompboxUI/StompboxMonoGame/: StompboxLayout.cs  StompboxMonoGame.projitems  StompboxMonoGame.shproj
StompboxUI/StompboxPlugin/: README.txt  StompboxPlugin.csproj
StompboxUI/StompboxRemote/: StompboxRemote.csproj
StompboxUI/StompboxRemoteGL/: StompboxRemoteGL.csproj
StompboxUI/StompboxRemoteIot/: Program.cs  StompboxLayout.cs  StompboxRemoteIot.csproj
StompboxUI/StompboxRemoteIot/Ili9341/: Ili9341.cs  Ili9341Imaging.cs  Ili934xCommand.cs  Rgb565.cs
StompboxUI/StompboxShared/: StompboxShared.projitems
StompboxUI/StompboxShared/Interface/: DAWInterface.cs  MobileInterface.cs  PedalboardInterface.cs  PluginInterface.cs
stompbox/: CMakeLists.txt  DefaultPlugins.h  PluginProcessor.cpp
stompbox-capi/: CMakeLists.txt  StompboxCAPI.cpp  StompboxCAPI.h
stompbox-core/: AudioFile.h  CMakeLists.txt  FileType.h  PluginFactory.cpp  PluginFactory.h  PluginProcessor.cpp  PluginProcessor.h  StompBox.cpp  StompBox.h
stompbox-jack/: CMakeLists.txt  stompbox-jack.cpp
stompbox-lv2/: CMakeLists.txt  StompboxLV2.cpp  StompboxLV2Plugin.h
stompbox-lv2/Examples/: CMakeLists.txt  SimpleIO.cpp  SimpleIO.h  manifest.ttl.in  simple_io.ttl.in
stompbox-stomps/: AudioFilePlayer.cpp  AudioFilePlayer.h  AudioFileRecorder.cpp  AudioFileRecorder.h  AutoWah.cpp  AutoWah.h  CMakeLists.txt  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  DefaultPlugins.cpp  Delay.cpp  Delay.h  Flanger.cpp  Flanger.h  Fuzz.cpp  Fuzz.h  Gain.cpp  Gain.h  GraphicEqualizer.cpp  GuitarConvolver.cpp  GuitarConvolver.h  HighLowFilter.cpp  HighLowFilter.h  MultiGate.cpp  MultiGate.h  NAM.cpp  NAM.h  NAMMultiBand.cpp  NAMMultiBand.h  NoiseGate.cpp  NoiseGate.h  PeakingFilter.cpp  PeakingFilter.h  Phaser.cpp  Phaser.h  PitchDetector.cpp  PitchDetector.h  Reverb.cpp  (+11 more)
stompbox/stompbox-core/: AudioFile.cpp  PluginProcessor.cpp  PluginProcessor.h
stompbox/stompbox-stomps/: DefaultPlugins.h
